--- a/theme/src/css/main/content-elements/icon-text-link.css
+++ b/theme/src/css/main/content-elements/icon-text-link.css
@@ -16,10 +16,7 @@
 }
 
 .ce-icon-text-link__wrp.internal-margins {
-  padding-left: 1.6rem;
-  padding-right: 1.6rem;
-  padding-top: 1.6rem;
-  padding-bottom: 1.6rem;
+  padding: 1.6rem;
 }
 
 .ce-icon-text-link__wrp.inverted-color {
@@ -79,7 +76,7 @@
 }
 
 .ce-icon-text-link__link .stretched-link:hover:after {
-  background-color: hsla(0, 0, 0%, 0.03);
+  background-color: hsla(0deg 0 0% 3%);
 }
 
 /* -------------------------------------------------------- */
