--- a/theme/src/css/main/content-elements/site-footer.css
+++ b/theme/src/css/main/content-elements/site-footer.css
@@ -5,10 +5,10 @@
   --t3-ce-footer-bg: var(--t3-body-color);
   --t3-ce-footer-color-hs: 0, 0%;
   --t3-ce-footer-color-l: 100%;
-  --t3-ce-footer-color: hsl(var(--t3-ce-footer-color-hs), var(--t3-ce-footer-color-l));
+  --t3-ce-footer-color: hsl(var(--t3-ce-footer-color-hs) var(--t3-ce-footer-color-l));
   --t3-ce-footer-font-size: 0.875rem;
-  --t3-ce-footer-links-color: hsl(var(--t3-ce-footer-color-hs), var(--t3-ce-footer-color-l));
-  --t3-ce-footer-links-hover-color: hsla(var(--t3-ce-footer-color-hs), var(--t3-ce-footer-color-l), 0.7);
+  --t3-ce-footer-links-color: hsl(var(--t3-ce-footer-color-hs) var(--t3-ce-footer-color-l));
+  --t3-ce-footer-links-hover-color: hsla(var(--t3-ce-footer-color-hs) var(--t3-ce-footer-color-l) 0.7);
 
   background-color: var(--t3-ce-footer-bg);
   color: var(--t3-ce-footer-color);
@@ -79,8 +79,7 @@
 
 .ce-site-footer__links-list {
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
