--- a/theme/src/css/main/global/nav/target-blank.css
+++ b/theme/src/css/main/global/nav/target-blank.css
@@ -15,7 +15,7 @@
   left: 0.5rem;
   background-color: var(--t3-target-blank-msg-bg);
   color: var(--t3-target-blank-msg-color);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 2px 2px 0 rgba(0 0 0 16%), 0 0 0 1px rgba(0 0 0 8%);
   z-index: 1030;
   cursor: default;
 }
