--- a/theme/src/css/main/content-elements/hero-image.css
+++ b/theme/src/css/main/content-elements/hero-image.css
@@ -2,17 +2,17 @@
 /* No media query for `xs` since this is the default in Bootstrap */
 .ce-hero-image {
   --t3-ce-hero-image-header-color: var(--t3-primary);
-  --t3-ce-hero-image-header-link-hover-color: hsla(var(--t3-primary-hs), var(--t3-primary-l), 0.8);
+  --t3-ce-hero-image-header-link-hover-color: hsla(var(--t3-primary-hs) var(--t3-primary-l) 0.8);
   --t3-ce-hero-image-subheader-color: var(--t3-white);
   --t3-ce-hero-image-bodytext-color: var(--t3-white);
   --t3-ce-hero-image-link-color: var(--t3-light);
-  --t3-ce-hero-image-link-hover-color: hsla(var(--t3-light-hs), var(--t3-light-l), 0.8);
+  --t3-ce-hero-image-link-hover-color: hsla(var(--t3-light-hs) var(--t3-light-l) 0.8);
   --t3-ce-hero-image-caption-width: 75%;
   --t3-ce-hero-image-min-height-on-mobile: 460px;
-  --t3-ce-hero-image-primary-overlay: hsla(var(--t3-primary-hs), var(--t3-primary-l), 0.4);
-  --t3-ce-hero-image-secondary-overlay: hsla(var(--t3-secondary-hs), var(--t3-secondary-l), 0.4);
-  --t3-ce-hero-image-light-overlay: hsla(var(--t3-light-hs), var(--t3-light-l), 0.4);
-  --t3-ce-hero-image-dark-overlay: hsla(var(--t3-dark-hs), var(--t3-dark-l), 0.4);
+  --t3-ce-hero-image-primary-overlay: hsla(var(--t3-primary-hs) var(--t3-primary-l) 0.4);
+  --t3-ce-hero-image-secondary-overlay: hsla(var(--t3-secondary-hs) var(--t3-secondary-l) 0.4);
+  --t3-ce-hero-image-light-overlay: hsla(var(--t3-light-hs) var(--t3-light-l) 0.4);
+  --t3-ce-hero-image-dark-overlay: hsla(var(--t3-dark-hs) var(--t3-dark-l) 0.4);
   --t3-ce-hero-image-primary-bg: var(--t3-primary);
   --t3-ce-hero-image-secondary-bg: var(--t3-secondary);
   --t3-ce-hero-image-dark-bg: var(--t3-dark);
@@ -86,7 +86,7 @@
   font-weight: 500;
   color: var(--t3-ce-hero-image-bodytext-color);
   overflow: hidden;
-  display: -webkit-box;
+  display: -webkit-box; /* stylelint-disable-line */
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 }
@@ -120,7 +120,7 @@
 }
 
 .ce-hero-image--overlay-primary .picture-partial__item-img {
-  background-color: hsl(var(--t3-primary-hs), calc(var(--t3-primary-l) - 30%));
+  background-color: hsl(var(--t3-primary-hs) calc(var(--t3-primary-l) - 30%));
 }
 
 .ce-hero-image--overlay-secondary {
@@ -128,7 +128,7 @@
 }
 
 .ce-hero-image--overlay-secondary .picture-partial__item-img {
-  background-color: hsl(var(--t3-secondary-hs), calc(var(--t3-secondary-l) - 30%));
+  background-color: hsl(var(--t3-secondary-hs) calc(var(--t3-secondary-l) - 30%));
 }
 
 .ce-hero-image--overlay-dark {
@@ -136,7 +136,7 @@
 }
 
 .ce-hero-image--overlay-dark .picture-partial__item-img {
-  background-color: hsl(var(--t3-dark-hs), calc(var(--t3-dark-l) - 20%));
+  background-color: hsl(var(--t3-dark-hs) calc(var(--t3-dark-l) - 20%));
 }
 
 .ce-hero-image--overlay-light {
@@ -144,11 +144,11 @@
 }
 
 .ce-hero-image--overlay-light .picture-partial__item-img {
-  background-color: hsl(var(--t3-light-hs), calc(var(--t3-light-l) - 70%));
+  background-color: hsl(var(--t3-light-hs) calc(var(--t3-light-l) - 70%));
 }
 
 .ce-hero-image--overlay-disable .picture-partial__item-img {
-  background-color: hsl(var(--t3-dark-hs), calc(var(--t3-dark-l) - 20%));
+  background-color: hsl(var(--t3-dark-hs) calc(var(--t3-dark-l) - 20%));
 }
 
 /* -------------------------------------------------------- */
