--- a/theme/src/css/main/content-elements/image-text-link.css
+++ b/theme/src/css/main/content-elements/image-text-link.css
@@ -15,16 +15,6 @@
   --t3-ce-itl-color: var(--t3-body-bg);
 }
 
-.inverted-color .ce-img-text-link__subheader .subheader-item {
-  color: var(--t3-primary);
-}
-
-.internal-margins .ce-img-text-link__body {
-  padding-left: 1.6rem;
-  padding-right: 1.6rem;
-  padding-bottom: 1.8rem;
-}
-
 .ce-img-text-link__picture,
 .ce-img-text-link__svg-image {
   margin-bottom: 1rem;
@@ -66,12 +56,22 @@
   color: var(--t3-ce-itl-subheader-color);
 }
 
+.inverted-color .ce-img-text-link__subheader .subheader-item {
+  color: var(--t3-primary);
+}
+
 .ce-img-text-link__bodytext .bodytext-partial {
   color: var(--t3-ce-itl-bodytext-color);
 }
 
 .ce-img-text-link__body {
   padding-bottom: 1.2rem;
+}
+
+.internal-margins .ce-img-text-link__body {
+  padding-left: 1.6rem;
+  padding-right: 1.6rem;
+  padding-bottom: 1.8rem;
 }
 
 .ce-img-text-link__link .link-partial {
@@ -93,7 +93,7 @@
 }
 
 .ce-img-text-link__link .stretched-link:hover:after {
-  background-color: hsla(0, 0, 0%, 0.03);
+  background-color: hsla(0deg 0 0% 3%);
 }
 
 /* -------------------------------------------------------- */
