--- a/theme/src/css/main/global/helpers/text.css
+++ b/theme/src/css/main/global/helpers/text.css
@@ -25,7 +25,7 @@
 /* Text Clamp (Truncating Multiple Line Text) */
 .text-clamp-base {
   overflow: hidden;
-  display: -webkit-box;
+  display: -webkit-box; /* stylelint-disable-line */
   -webkit-box-orient: vertical;
 }
 
