--- a/theme/src/css/main/global/nav/skip-links.css
+++ b/theme/src/css/main/global/nav/skip-links.css
@@ -4,7 +4,7 @@
   left: 0;
   z-index: 1030;
   background-color: var(--t3-skip-link-bg);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 2px 2px 0 rgba(0 0 0 16%), 0 0 0 1px rgba(0 0 0 8%);
   margin: 2rem auto 1.2rem 0;
   overflow: hidden;
 }
